fix: mobile layout issues (#311)
* fix: footer alignment

* fix: page titles

* fix: top padding on mobile

* fix: cheatsheet height

* linter: remove unused import

--- a/src/components/Cheatsheet.module.css
+++ b/src/components/Cheatsheet.module.css
@@ -1,12 +1,12 @@
 .cheatsheet {
   height: auto !important;
   /* page height - navbar height - some spacing*/
-  max-height: calc(100vh - 76px - 1rem) !important;
+  max-height: calc(100% - 4.75rem - 1rem) !important;
   margin: 0px auto !important;
   border: none !important;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
-  width: 528px;
+  width: 33rem;
 
   box-shadow: 6px -3px 12px 3px rgba(0, 0, 0, 0.1);
 }
